--- a/index.html
+++ b/index.html
@@ -1,41 +1,122 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" href="../img/icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+<header>
+  <div class="content-wrapper">
+    <figure>
+      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+    </figure>
+    <div class="header-divider"></div>
+    <nav>
+      <ul>
+        <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+        <li><a href="about/index.html" target="_blank">About</a></li>
+      </ul>
+    </nav>
+  </div>
+</header> 
+<main>
+  <section class="hero-area">
+    <img src="assets/jake-melara-30679-unsplash.jpg" alt="">
+    <div class="content-wrapper">
+      <h1>Retreat from the desk, return refreshed.</h1>
+    </div>
+  </section>
+  <aside>
+    <div class="content-wrapper">
+      <div class="form-description">
+        <h3>Want to join the next retreat?</h3>
+        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+      </div>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+      <div class="form">
+        <h3>Find out more</h3>
+        <input type="text" name="name" value="email address">
+        <input type="button" value="Download Itinerary">
+      </div>
+        
+    </div><!-- aside content wrapper ends-->
+  </aside>
+ <section class="main-body">
+   <div class="body-wrapper">
+     <h3>Have the work week you've always dreamed of, without the bad wifi.</h3>
+     <p>Located in a peaceful bungalow, just outside of Geneva, Wisconsin. </p>
+     <p>12 private rooms with ensuite bathrooms, two group meeting rooms and four breakout rooms.</p>
+     <p>Private chef team provides on demand meals, just like your team kitchen.</p>
+     <p>Five outdoor obstacle courses, including private beach, 1/2 mile from bungalow.</p>
+     <p>Retreat facilitator to manage your day to day activities, so you all get a chance to rest.</p>
+     <p>Dedicated computer rooms for times that you must wifi.</p>
+   </div>
+   <div class="body-wrapper-bottom">
+     <h3>Be a better team in 5 days, like these.</h3>
+     <h4>LaCrue Bottling Co. October 2017</h4>
+     <img src="assets/omar-lopez-296944-unsplash.jpg" alt="group img">
+     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id incidunt earum cupiditate cum. Consequatur incidunt earum vel, laborum hic quis?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non hic dignissimos doloribus dolorum sequi, eveniet illo praesentium nisi quasi suscipit.</p>
+   </div>
+ </section>
+
+ 
+</main><!-- main wrapper end-->
+
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <div class="contact">
+        <h3>Contact</h3>
+      <address>
+        555-555-5555
+        hello@unplugged.com
+      </address>
+      </div>
+      <div class="social">
+        <div class="social-icons">
+          <h3>Social</h3>
+          <p><a href="https://www.facebook.com/yoursite" target="_blank">facebook icon</a></p>
+          <p><a href="https://www.twitter.com/yoursite" target="_blank">twitter icon</a></p>
+          <p><a href="https://www.instagram.com/yoursite">instagram icon</a></p>
+             <!-- other social links here-->
+        </div>
+      </div>
+    </div><!-- footer content ends-->
+  </div><!-- footer content-wrapper ends-->
+
+ <div class="copyright">
+  <p>Copyright 2018 | Unplugged</p>
+ </div>
+</footer>
+  
+  
+  <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+  <script src="../js/plugins.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
   </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
