--- a/index.html
+++ b/index.html
@@ -52,29 +52,51 @@
         <h3>Find out more</h3>
         <input type="text" name="name" value="email address">
         <input type="button" value="Download Itinerary">
-      </div>
-        
+      </div>    
     </div><!-- aside content wrapper ends-->
   </aside>
- <section class="main-body">
-   <div class="body-wrapper">
+ <section class="features">
+   <div class="content-wrapper">
      <h3>Have the work week you've always dreamed of, without the bad wifi.</h3>
-     <p>Located in a peaceful bungalow, just outside of Geneva, Wisconsin. </p>
-     <p>12 private rooms with ensuite bathrooms, two group meeting rooms and four breakout rooms.</p>
-     <p>Private chef team provides on demand meals, just like your team kitchen.</p>
-     <p>Five outdoor obstacle courses, including private beach, 1/2 mile from bungalow.</p>
-     <p>Retreat facilitator to manage your day to day activities, so you all get a chance to rest.</p>
-     <p>Dedicated computer rooms for times that you must wifi.</p>
-   </div>
-   <div class="body-wrapper-bottom">
-     <h3>Be a better team in 5 days, like these.</h3>
-     <h4>LaCrue Bottling Co. October 2017</h4>
-     <img src="assets/omar-lopez-296944-unsplash.jpg" alt="group img">
-     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id incidunt earum cupiditate cum. Consequatur incidunt earum vel, laborum hic quis?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non hic dignissimos doloribus dolorum sequi, eveniet illo praesentium nisi quasi suscipit.</p>
+     <div class="features-items">
+    <article>
+       <p class="fontawesome-icon"></p>
+       <p class="features-item-description">Located in a peaceful bungalow, just outside of Geneva, Wisconsin.</p>
+      </article>
+    <article>
+      <p class="fontawesome-icon"></p>
+      <p class="features-item-description">12 private rooms with ensuite bathrooms, two group meeting rooms and four breakout rooms.</p>
+     </article>
+     <article>
+     <p class="fontawesome-icon"></p>
+     <p class="features-item-description">Private chef team provides on demand meals, just like your team kitchen.</p>
+     </article>
+     <article>
+     <p class="fontawesome-icon"></p>
+     <p class="features-item-description">Five outdoor obstacle courses, including private beach, 1/2 mile from bungalow.</p>
+     </article>
+     <article>
+     <p class="fontawesome-icon"></p>
+     <p class="features-item-description">Retreat facilitator to manage your day to day activities, so you all get a chance to rest.</p>
+     </article>
+    <article>
+     <p class="fontawesome-icon"></p>
+     <p class="features-item-description">Dedicated computer rooms for times that you must wifi.</p>
+     </article>
+     </div>
    </div>
  </section>
-
- 
+ <section class="reviews">
+   <div class="content-wrapper">
+     <h2>Be a better team in 5 days, like this one.</h2>
+     <article>
+       <div>
+         <h3>LaCrue Bottling Co. October 2018</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quaerat repellendus illum ratione vel dignissimos, vitae quod sint quo, nihil labore soluta voluptates tenetur nostrum maxime saepe animi optio! Eaque, amet accusamus aspernatur quibusdam necessitatibus deserunt sint odit, corrupti eum inventore ipsam totam quidem cumque est laudantium sit. Exercitationem facere dignissimos animi consectetur ipsum quidem, dolore ut, necessitatibus, praesentium dolorum rem culpa officia sint hic quae fugiat ducimus dicta ex atque. In voluptate dolor sunt possimus ut tenetur esse facere earum tempore quae impedit deserunt dicta aspernatur voluptas porro sed voluptatum perferendis incidunt, dolorem iste cum provident? Repudiandae, ab dolores!</p>
+       </div>
+     </article>
+   </div>
+ </section> 
 </main><!-- main wrapper end-->
 
 <footer>
