--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="">
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Unplugged Retreat</title>
+  <title>About</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="../img/icon.png">
@@ -14,13 +18,11 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
-</head>
 
+  <meta name="theme-color" content="#fafafa">
+</head>
 <body>
-  <!--[if lte IE 9]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-<header>
+  <header>
   <div class="content-wrapper">
     <figure>
       <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
@@ -35,76 +37,40 @@
   </div>
 </header> 
 <main>
-  <section class="hero-area">
-    <img src="assets/jake-melara-30679-unsplash.jpg" alt="">
-    <div class="content-wrapper">
-      <h1>Retreat from the desk, return refreshed.</h1>
-    </div>
-  </section>
-  <aside>
-    <div class="content-wrapper">
-      <div class="form-description">
-        <h3>Want to join the next retreat?</h3>
-        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+   <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
       </div>
+    </section>
+<section class="mission">
+  <div class="content-wrapper">
+    <div class="mission-content">
+      <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sapiente facere delectus quam accusamus neque aspernatur! In possimus rem neque aliquam minus, impedit doloribus ipsum.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore possimus quos, laborum tenetur ipsam id delectus necessitatibus. Veniam nisi voluptatem sequi labore eaque. Vero, nulla.</p>
+      
+    </div>
+  </div> <!-- mission content wrapper ends-->
+</section><!-- contact-info-->
 
-      <div class="form">
-        <h3>Find out more</h3>
-        <input type="text" name="name" value="email address">
-        <input type="button" value="Download Itinerary">
-      </div>    
-    </div><!-- aside content wrapper ends-->
-  </aside>
- <section class="features">
-   <div class="content-wrapper">
-     <h3>Have the work week you've always dreamed of, without the bad wifi.</h3>
-     <div class="features-items">
-    <article>
-       <p class="fontawesome-icon"></p>
-       <p class="features-item-description">Located in a peaceful bungalow, just outside of Geneva, Wisconsin.</p>
-      </article>
-    <article>
-      <p class="fontawesome-icon"></p>
-      <p class="features-item-description">12 private rooms with ensuite bathrooms, two group meeting rooms and four breakout rooms.</p>
-     </article>
-     <article>
-     <p class="fontawesome-icon"></p>
-     <p class="features-item-description">Private chef team provides on demand meals, just like your team kitchen.</p>
-     </article>
-     <article>
-     <p class="fontawesome-icon"></p>
-     <p class="features-item-description">Five outdoor obstacle courses, including private beach, 1/2 mile from bungalow.</p>
-     </article>
-     <article>
-     <p class="fontawesome-icon"></p>
-     <p class="features-item-description">Retreat facilitator to manage your day to day activities, so you all get a chance to rest.</p>
-     </article>
-    <article>
-     <p class="fontawesome-icon"></p>
-     <p class="features-item-description">Dedicated computer rooms for times that you must wifi.</p>
-     </article>
-     </div>
-   </div>
- </section>
- <section class="reviews">
-   <div class="content-wrapper">
-     <h2>Be a better team in 5 days, like this one.</h2>
-     <article>
-       <div>
-         <h3>LaCrue Bottling Co. October 2018</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quaerat repellendus illum ratione vel dignissimos, vitae quod sint quo, nihil labore soluta voluptates tenetur nostrum maxime saepe animi optio! Eaque, amet accusamus aspernatur quibusdam necessitatibus deserunt sint odit, corrupti eum inventore ipsam totam quidem cumque est laudantium sit. Exercitationem facere dignissimos animi consectetur ipsum quidem, dolore ut, necessitatibus, praesentium dolorum rem culpa officia sint hic quae fugiat ducimus dicta ex atque. In voluptate dolor sunt possimus ut tenetur esse facere earum tempore quae impedit deserunt dicta aspernatur voluptas porro sed voluptatum perferendis incidunt, dolorem iste cum provident? Repudiandae, ab dolores!</p>
-       </div>
-     </article>
-   </div>
- </section> 
-</main><!-- main wrapper end-->
+</main>
+  <!-- Add your site or application content here -->
+
 
 <footer>
   <div class="content-wrapper">
     <div class="footer-content">
       <div class="contact">
+        <h2>Contact us, because you all need this.</h2>
+       <address>
+         <h3>General Information</h3>
+            333 Main St, Lake Geneva, Wi 53147
+            555-555-5555
+            hello@unplugged.com
+        <h3>Chat with a Facilitator</h3> 
+            555-555-5555
+            hello@unplugged.com
         <h3>Contact</h3>
-      <address>
         555-555-5555
         hello@unplugged.com
       </address>
@@ -125,20 +91,18 @@
   <p>Copyright 2018 | Unplugged</p>
  </div>
 </footer>
-  
-  
-  <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+
+
+  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
