added html to faqs index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About</title>
+  <title>FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,7 +21,9 @@
 
   <meta name="theme-color" content="#fafafa">
 </head>
+
 <body>
+  <body>
   <header>
   <div class="content-wrapper">
     <figure>
@@ -54,10 +56,7 @@
 </section><!-- contact-info-->
 
 </main>
-  <!-- Add your site or application content here -->
-
-
-<footer>
+  <footer>
   <div class="content-wrapper">
     <div class="footer-content">
       <div class="contact">
@@ -91,8 +90,6 @@
   <p>Copyright 2018 | Unplugged</p>
  </div>
 </footer>
-
-
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
