--- a/faqs/index.html
+++ b/faqs/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,9 +23,73 @@
 </head>
 
 <body>
+  <body>
+  <header>
+  <div class="content-wrapper">
+    <figure>
+      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+    </figure>
+    <div class="header-divider"></div>
+    <nav>
+      <ul>
+        <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+        <li><a href="about/index.html" target="_blank">About</a></li>
+      </ul>
+    </nav>
+  </div>
+</header> 
+<main>
+   <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </div>
+    </section>
+<section class="mission">
+  <div class="content-wrapper">
+    <div class="mission-content">
+      <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sapiente facere delectus quam accusamus neque aspernatur! In possimus rem neque aliquam minus, impedit doloribus ipsum.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore possimus quos, laborum tenetur ipsam id delectus necessitatibus. Veniam nisi voluptatem sequi labore eaque. Vero, nulla.</p>
+      
+    </div>
+  </div> <!-- mission content wrapper ends-->
+</section><!-- contact-info-->
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+</main>
+  <footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <div class="contact">
+        <h2>Contact us, because you all need this.</h2>
+       <address>
+         <h3>General Information</h3>
+            333 Main St, Lake Geneva, Wi 53147
+            555-555-5555
+            hello@unplugged.com
+        <h3>Chat with a Facilitator</h3> 
+            555-555-5555
+            hello@unplugged.com
+        <h3>Contact</h3>
+        555-555-5555
+        hello@unplugged.com
+      </address>
+      </div>
+      <div class="social">
+        <div class="social-icons">
+          <h3>Social</h3>
+          <p><a href="https://www.facebook.com/yoursite" target="_blank">facebook icon</a></p>
+          <p><a href="https://www.twitter.com/yoursite" target="_blank">twitter icon</a></p>
+          <p><a href="https://www.instagram.com/yoursite">instagram icon</a></p>
+             <!-- other social links here-->
+        </div>
+      </div>
+    </div><!-- footer content ends-->
+  </div><!-- footer content-wrapper ends-->
+
+ <div class="copyright">
+  <p>Copyright 2018 | Unplugged</p>
+ </div>
+</footer>
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
