--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>FAQ</title>
+  <title>About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,10 +20,10 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <body>
   <header>
   <div class="content-wrapper">
     <figure>
@@ -53,10 +53,18 @@
       
     </div>
   </div> <!-- mission content wrapper ends-->
+</section>
+<section class="map">
+  <figure>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3113.1571620045183!2d-122.90318724947441!3d38.714200565227465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8084057e64de64b7%3A0xce568e8d94f4001b!2s21310%20River%20Ln%2C%20Geyserville%2C%20CA%2095441!5e0!3m2!1sen!2sus!4v1635647205215!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </figure>
 </section><!-- contact-info-->
 
 </main>
-  <footer>
+  <!-- Add your site or application content here -->
+
+
+<footer>
   <div class="content-wrapper">
     <div class="footer-content">
       <div class="contact">
@@ -90,6 +98,8 @@
   <p>Copyright 2018 | Unplugged</p>
  </div>
 </footer>
+
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
