--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
        </figure>
        <div>
          <h3>LaCrue Bottling Co. October 2018</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quaerat repellendus illum ratione vel dignissimos, vitae quod sint quo, nihil labore soluta voluptates tenetur nostrum maxime saepe animi optio! Eaque, amet accusamus aspernatur quibusdam necessitatibus deserunt sint odit, corrupti eum inventore ipsam totam quidem cumque est laudantium sit. Exercitationem facere dignissimos animi consectetur ipsum quidem, dolore ut, necessitatibus, praesentium dolorum rem culpa officia sint hic quae fugiat ducimus dicta ex atque. In voluptate dolor sunt possimus ut tenetur esse facere earum tempore quae impedit deserunt dicta aspernatur voluptas porro sed voluptatum perferendis incidunt, dolorem iste cum provident? Repudiandae, ab dolores!</p>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quaerat repellendus illum ratione vel dignissimos, vitae quod sint quo, nihil labore soluta voluptates tenetur nostrum maxime saepe animi optio!</p>
        </div>
      </article>
    </div>
@@ -137,9 +137,9 @@
         <h4>social</h4>
         <div class="social-icons">
           
-          <p><a href="https://www.facebook.com/yoursite" target="_blank">facebook icon</a></p>
-          <p><a href="https://www.twitter.com/yoursite" target="_blank">twitter icon</a></p>
-          <p><a href="https://www.instagram.com/yoursite">instagram icon</a></p>
+          <p><a href="#"><i class="fab fa-facebook-f"></i></a></p>
+          <p><a href="#"><i class="fab fa-twitter"></i></a></p>
+          <p><a href="#"><i class="fab fa-instagram"></i></a></p>
              <!-- other social links here-->
         </div>
       </div>
