--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="../img/icon.png">
   <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -111,11 +112,11 @@
      <h2>Be a better team in 5 days, like this one.</h2>
      <article>
        <figure>
-         <img src="img/omar-lopez-296944-unsplash.jpg">
+         <img src="img/group-pic.jpg">
        </figure>
        <div>
          <h3>LaCrue Bottling Co. October 2018</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quaerat repellendus illum ratione vel dignissimos, vitae quod sint quo, nihil labore soluta voluptates tenetur nostrum maxime saepe animi optio!</p>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quaerat repellendus illum ratione vel dignissimos, vitae quod sint quo, nihil labore soluta </p>
        </div>
      </article>
    </div>
@@ -128,18 +129,23 @@
       <div class="contact">
         <h4>Contact</h4>
       <address>
-        555-555-5555
+        <p>
+        555-555-5555 <br>
         hello@unplugged.com
+        </p>
       </address>
       </div>
       <div class="social">
-        
-        <h4>social</h4>
-        <div class="social-icons">
-          
-          <p><a href="#"><i class="fab fa-facebook-f"></i></a></p>
-          <p><a href="#"><i class="fab fa-twitter"></i></a></p>
-          <p><a href="#"><i class="fab fa-instagram"></i></a></p>
+        <h4>Social</h4>
+        <div class="social-icons">  
+          <p>
+            <a href="img/facebook.png">fb</a>
+          </p>
+          <p>
+            <a href="img/twitter.png">t</a>
+          </p>
+          <p>
+            <a href="img/instagram.png">I</a></p>
              <!-- other social links here-->
         </div>
       </div>
